JavaScript/EXAMPLES/BUILT-IN/NUMBER/Number.prototype.toString.js
a = 5;
console.log(a.toString (2)); // 101

// ATTENTION!
// console.log(5.toString(2));
// SyntaxError: Invalid or unexpected token

console.log(5..toString(2)); // 101